# Projeto_letras

./: README.md  app.py  pyproject.toml  testes.ipynb
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
